--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="mmm_anonymeet">
+
+  <meta name="google-signin-client_id" content="692961640793-hmmoi7otg8aqavd6qn2o8gf7qtar0oqd.apps.googleusercontent.com" />
+
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -30,6 +33,30 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-auth.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyBWTUGMqH9l88FpwPmlBEck-cJoLNvPqIU",
+    authDomain: "anonymeet-25976.firebaseapp.com",
+    projectId: "anonymeet-25976",
+    storageBucket: "anonymeet-25976.appspot.com",
+    messagingSenderId: "692961640793",
+    appId: "1:692961640793:web:25b6f3f4b9306178470c48",
+    measurementId: "G-7HB1NGJFET"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
